tests/baselines/reference/ES5For-ofTypeCheck9.errors.txt
ES5For-ofTypeCheck9.ts(2,15): error TS2461: Type 'number | symbol | string[]' is not an array type.


==== ES5For-ofTypeCheck9.ts (1 errors) ====
    var union: string | string[] | number | symbol;
    for (let v of union) { }
                  ~~~~~
!!! error TS2461: Type 'number | symbol | string[]' is not an array type.